--- a/templates/base.html
+++ b/templates/base.html
@@ -301,8 +301,8 @@
             {% else %}
                 <span class="anon">
                     <a href="{{ url('auth_login') }}?next={{ LOGIN_RETURN_PATH|urlencode }}"><b>{{ _('Log in') }}</b></a>
-                    <!-- &nbsp;{{ _('or') }}&nbsp; -->
-                    <!-- <a href="{{ url('registration_register') }}"><b>{{ _('Sign up') }}</b></a> -->
+                    &nbsp;{{ _('or') }}&nbsp;
+                    <a href="{{ url('registration_register') }}"><b>{{ _('Sign up') }}</b></a>
                 </span>
             {% endif %}
         </span>
