--- a/templates/contest/ranking.html
+++ b/templates/contest/ranking.html
@@ -156,6 +156,7 @@
                         url: '?raw'
                     }).done(function (data) {
                         $('#users-table').html(data);
+                        firstSolve();
                     }).always(function () {
                         ranking_outdated = false;
                         setTimeout(update_ranking, 10000);
@@ -236,7 +237,7 @@
                 return sub1['time'] < sub2['time'];
             }
 
-            function firstSolve() {
+            window.firstSolve = function() {
                 let firstSolves = {};
 
                 $('td.full-score a').each(function () {
